<resources>
    <string name="app_name" translatable="false">Weather App</string>

    <!-- Tab Menu Titles -->
    <string name="cities_menu">Cities</string>
    <string name="home_menu">Home</string>
    <string name="settings_menu">Settings</string>

    <string name="city">%s, %s</string>
    <string name="today">Today: %s°</string>
    <string name="tomorrow">Tomorrow: %s°</string>

    <string name="time_temp">Temp, °C</string>
    <string name="feels_like_temp">Feels like</string>
    <string name="day_humidity">Humidity, %</string>
    <string name="pressure">Pressure, hPa</string>
    <string name="day_wind_speed">Wind, m/s</string>

    <string name="temperature">Temperature:</string>
    <string name="temperature_symbol">°C</string>
    <string name="humidity">Humidity:</string>
    <string name="humidity_symbol">%</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="wind_speed_symbol">m/s</string>

    <!--Network Errors-->
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="request_error">REQUEST_ERROR</string>
    <string name="unknown_host">UNKNOWN HOST</string>
    <string name="unknown_error">UNKNOWN ERROR</string>

    <string name="empty_search">Please, enter city name</string>
    <string name="data_empty">No data about weather.\nAdd your city to get info about weather/</string>

    <string name="theme">Theme:</string>
    <string name="night_mode">Night mode</string>
    <string name="add_location">Add location</string>
    <string name="min_temp">MIN.</string>
    <string name="max_temp">MAX.</string>

    <string name="enter_country">Enter Country</string>
    <string name="done">Search</string>

</resources>