<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_5"
        tools:context=".ui.homeMenu.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/weather_data_padding"
            android:paddingEnd="@dimen/weather_data_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/TitleStyle"
                android:text="City, Country" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_weather_img_size"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StandardTextStyle"
                android:text="@string/temperature"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StandardTextStyle"
                android:text="@string/humidity"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StandardTextStyle"
                android:text="@string/wind_speed"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/data_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>