<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.onix.internship.ui.homeMenu.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.homeMenu.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="@{viewModel.storage.locationList.isEmpty ? View.GONE : View.VISIBLE}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dayRecycler"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/day_item" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/topDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/dayRecycler" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/tempText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weatherDuringDayRecycler" />

            <TextView
                android:id="@+id/tempText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_temp"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_color_16_sp"
                app:layout_constraintBottom_toTopOf="@+id/feelsLikeTempText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeText" />

            <TextView
                android:id="@+id/feelsLikeTempText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/feels_like_temp"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_color_16_sp"
                app:layout_constraintBottom_toTopOf="@+id/pressureText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tempText" />

            <TextView
                android:id="@+id/pressureText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pressure"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintBottom_toTopOf="@+id/humidityText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feelsLikeTempText" />

            <TextView
                android:id="@+id/humidityText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/day_humidity"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toTopOf="@+id/windSpeedText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pressureText" />

            <TextView
                android:id="@+id/windSpeedText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/day_wind_speed"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_color_16_sp"
                app:layout_constraintBottom_toBottomOf="@+id/weatherDuringDayRecycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidityText" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/bottomDivider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:dividerColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/weatherDuringDayRecycler"
                app:layout_constraintEnd_toStartOf="@+id/weatherDuringDayRecycler"
                app:layout_constraintStart_toEndOf="@+id/timeText"
                app:layout_constraintTop_toTopOf="@+id/weatherDuringDayRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weatherDuringDayRecycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/timeText"
                app:layout_constraintTop_toBottomOf="@+id/dayRecycler"
                tools:listitem="@layout/weather_during_day_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/data_empty"
            android:visibility="@{viewModel.storage.locationList.isEmpty ? View.VISIBLE : View.GONE}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>